--- a/package.json
+++ b/package.json
@@ -85,11 +85,13 @@
   },
   "dependencies": {
     "@mattkrick/automerge": "^0.7.11",
+    "@mattkrick/fast-rtc-peer": "^0.0.1",
+    "@mattkrick/fast-rtc-swarm": "^0.0.2",
     "@types/express": "^4.16.0",
     "@types/webpack": "^4.4.8",
-    "D": "^1.0.0",
     "diff-match-patch": "^1.0.1",
-    "himalaya": "^1.1.0"
+    "himalaya": "^1.1.0",
+    "immutable": "^3.8.2"
   },
   "peerDependencies": {
     "react": "^16.4.1",
@@ -129,9 +131,6 @@
     "react-dom": "^16.4.1",
     "rimraf": "^2.6.1",
     "semantic-release": "^15.0.0",
-    "signalhub": "^4.9.0",
-    "signalhubws": "^1.0.4",
-    "simple-peer": "^9.1.2",
     "style-loader": "^0.21.0",
     "ts-jest": "^22.0.0",
     "ts-node": "^7.0.0",
@@ -146,7 +145,6 @@
     "webpack-cli": "^3.1.0",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-hot-client": "^4.1.1",
-    "webrtc-swarm": "^2.9.0",
     "ws": "^6.0.0"
   }
 }
