add networking layer begin linting

--- a/src/types/mattkrick__automerge/tsconfig.json
+++ b/src/types/mattkrick__automerge/tsconfig.json
@@ -19,12 +19,7 @@
     "target": "es2017",
     "strict": true,
     "sourceMap": true,
-    "typeRoots": [
-      "node_modules/@types",
-      "src/types"
-    ]
-  },
-  "include": [
-    "src"
-  ]
+    "baseUrl": "types",
+    "typeRoots": ["types"]
+  }
 }
