--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@mattkrick/rich",
   "version": "0.0.1",
-  "description": "A decentralized collaborative rich text editor",
+  "description": "A decentralized collaborative rich text editor powered by DOM mutations, CRDTs, and WebRTC",
   "keywords": [
     "CRDT",
     "wysiwyg",
@@ -27,120 +27,59 @@
   },
   "scripts": {
     "dev": "ts-node playground/server/server.ts",
-    "lint": "tslint -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
+    "lint": "yarn prettier && yarn standard",
     "prebuild": "rimraf dist",
     "build": "webpack --config webpack.config.js -w",
     "build:playground": "tsc playground/server/server.ts",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:prod": "npm run lint && npm run test -- --coverage --no-cache",
-    "deploy-docs": "ts-node tools/gh-pages-publish",
-    "report-coverage": "cat ./coverage/lcov.info | coveralls",
-    "semantic-release": "semantic-release",
-    "semantic-release-prepare": "ts-node tools/semantic-release-prepare",
-    "precommit": "lint-staged"
+    "prettier": "prettier --write --loglevel warn src/**/*.{ts,tsx} playground/**/*.{ts,tsx}",
+    "precommit": "lint-staged",
+    "standard": "tslint -c tslint.json --project tsconfig.json --fix src/**/*.{ts,tsx}"
   },
   "lint-staged": {
-    "{src,test}/**/*.ts": [
+    "src/**/*.ts": [
       "prettier --write",
+      "tslint --fix",
       "git add"
     ]
   },
-  "config": {
-    "commitizen": {
-      "path": "node_modules/cz-conventional-changelog"
-    },
-    "validate-commit-msg": {
-      "types": "conventional-commit-types",
-      "helpMessage": "Use \"npm run commit\" instead, we use conventional-changelog format :) (https://github.com/commitizen/cz-cli)"
-    }
-  },
-  "jest": {
-    "transform": {
-      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
-    },
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js"
-    ],
-    "coveragePathIgnorePatterns": [
-      "/node_modules/",
-      "/test/"
-    ],
-    "coverageThreshold": {
-      "global": {
-        "branches": 90,
-        "functions": 95,
-        "lines": 95,
-        "statements": 95
-      }
-    },
-    "collectCoverage": true
-  },
-  "prettier": {
-    "semi": false,
-    "singleQuote": true
-  },
   "dependencies": {
     "@mattkrick/automerge": "^0.7.11",
-    "@mattkrick/fast-rtc-peer": "^0.0.1",
-    "@mattkrick/fast-rtc-swarm": "^0.0.2",
-    "@types/express": "^4.16.0",
-    "@types/webpack": "^4.4.8",
+    "@mattkrick/fast-rtc-peer": "^0.0.3",
+    "@mattkrick/fast-rtc-swarm": "^0.0.3",
     "diff-match-patch": "^1.0.1",
+    "eventemitter3": "^3.1.0",
     "himalaya": "^1.1.0",
-    "immutable": "^3.8.2"
+    "immutable": "^3.8.2",
+    "tslib": "^1.9.3",
+    "uuid": "^3.3.2"
   },
   "peerDependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
   },
   "devDependencies": {
+    "@types/express": "^4.16.0",
     "@types/jest": "^22.0.0",
-    "@types/node": "^10.0.3",
     "@types/react": "^16.4.6",
     "@types/react-dom": "^16.0.6",
-    "@types/webrtc": "^0.0.23",
-    "@types/ws": "^5.1.2",
+    "@types/webpack": "^4.4.8",
     "awesome-typescript-loader": "^5.2.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-syntax-object-rest-spread": "^6.13.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-export-extensions": "^6.22.0",
-    "babel-preset-react": "^6.24.1",
-    "colors": "^1.1.2",
-    "commitizen": "^2.9.6",
-    "coveralls": "^3.0.0",
-    "cross-env": "^5.0.1",
+    "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
-    "cz-conventional-changelog": "^2.0.0",
-    "eventemitter3": "^3.1.0",
     "express": "^4.16.3",
-    "http": "^0.0.0",
+    "gh-pages": "^1.2.0",
     "husky": "^0.14.0",
-    "jest": "^22.0.2",
     "lint-staged": "^7.1.3",
-    "lodash.camelcase": "^4.3.0",
     "prettier": "^1.13.4",
-    "prompt": "^1.0.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "rimraf": "^2.6.1",
-    "semantic-release": "^15.0.0",
     "style-loader": "^0.21.0",
-    "ts-jest": "^22.0.0",
     "ts-node": "^7.0.0",
     "tslint": "^5.8.0",
-    "tslint-config-prettier": "^1.1.0",
     "tslint-config-standard": "^7.0.0",
     "typedoc": "^0.11.0",
     "typescript": "^2.6.2",
-    "uuid": "^3.3.2",
-    "validate-commit-msg": "^2.12.2",
     "webpack": "^4.16.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-middleware": "^3.1.3",
